[gd_scene load_steps=10 format=3 uid="uid://cxhritgu733yp"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_egnvw"]
[ext_resource type="Texture2D" uid="uid://fhwgvg6yel0e" path="res://assets/andy.png" id="2_vd2sy"]
[ext_resource type="Texture2D" uid="uid://daysfys1j15is" path="res://assets/andy3.png" id="3_1nenl"]
[ext_resource type="Shader" path="res://static_shader.gdshader" id="3_4vg7o"]
[ext_resource type="Texture2D" uid="uid://dguimrjyk1tkc" path="res://assets/andy2.png" id="4_svbk6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_sdrxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vd2sy")
}, {
"duration": 1.0,
"texture": ExtResource("3_1nenl")
}, {
"duration": 1.0,
"texture": ExtResource("4_svbk6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cunw1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rmvww"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bu1cd"]
shader = ExtResource("3_4vg7o")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.03
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -2.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_egnvw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="AndyAnim" type="AnimatedSprite2D" parent="Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.345098)
position = Vector2(824, 771)
scale = Vector2(2.54514, 2.54514)
sprite_frames = SubResource("SpriteFrames_sdrxs")

[node name="Andy" type="Sprite2D" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0.345098)
position = Vector2(812, 750)
scale = Vector2(2.52668, 2.52668)
texture = ExtResource("2_vd2sy")

[node name="Title" type="Label" parent="Control"]
material = SubResource("ShaderMaterial_cunw1")
layout_mode = 0
offset_left = 157.0
offset_top = 66.0
offset_right = 432.0
offset_bottom = 279.0
theme_override_font_sizes/font_size = 45
text = "Five
Classes
at
Providence"

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 83.0
offset_top = 304.0
offset_right = 432.0
offset_bottom = 503.0
theme_override_constants/separation = 5

[node name="new_game" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rmvww")
text = "   New Game"
alignment = 0

[node name="continue_game" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rmvww")
disabled = true
text = "   Continue"
alignment = 0

[node name="custom_game" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rmvww")
disabled = true
text = "   Custom"
alignment = 0

[node name="settings" type="Button" parent="Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/hover = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rmvww")
theme_override_styles/normal = SubResource("StyleBoxEmpty_rmvww")
disabled = true
text = "   Settings"
alignment = 0

[node name="Static" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_bu1cd")
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="version" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = 619.0
offset_right = 57.0
offset_bottom = 636.0
grow_vertical = 0
text = "v 0.1"
vertical_alignment = 2

[node name="copyright" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 980.0
offset_top = 616.0
offset_right = 1139.0
offset_bottom = 633.0
grow_horizontal = 0
grow_vertical = 0
text = "Â©2024 FCAP Studios"
horizontal_alignment = 2
vertical_alignment = 2

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Class" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 540.0
offset_top = 279.0
offset_right = 620.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "12:00 AM
Class 1"
horizontal_alignment = 1

[node name="AndyTimer" type="Timer" parent="."]
autostart = true

[connection signal="mouse_entered" from="Control/VBoxContainer/new_game" to="." method="_on_new_game_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/new_game" to="." method="_on_new_game_mouse_exited"]
[connection signal="pressed" from="Control/VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="Control/VBoxContainer/continue_game" to="." method="_on_continue_game_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/continue_game" to="." method="_on_continue_game_mouse_exited"]
[connection signal="mouse_entered" from="Control/VBoxContainer/custom_game" to="." method="_on_custom_game_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/custom_game" to="." method="_on_custom_game_mouse_exited"]
[connection signal="mouse_entered" from="Control/VBoxContainer/settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="Control/VBoxContainer/settings" to="." method="_on_settings_mouse_exited"]
[connection signal="timeout" from="AndyTimer" to="." method="_on_andy_timer_timeout"]
